<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/searchFlightLayout"
        android:layout_width="342dp"
        android:layout_height="503dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/editSearchFlightAirlineName"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/airline_name_optional"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editSearchFlightAirportSource"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/source_airport_code"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editSearchFlightAirportDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/destination_airport_code"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/searchFlights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:onClick="searchFlights"
            android:text="@string/search" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>