<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearSearchAirline"
        android:layout_width="366dp"
        android:layout_height="603dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/searchAirlineText"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/enter_the_airline_name_or_leave_empty_to_view_all_airlines"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editSearchAirlineName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/airline_name"
            android:inputType="textPersonName"
            android:minHeight="20dp" />

        <Button
            android:id="@+id/searchAirlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="searchAirline"
            android:text="@string/search_airline" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>